# gamesir-ai-bot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  deploy.sh  docker-compose.yml
commands/: Cargo.toml
commands/src/: lib.rs  other.rs  play.rs
src/: config.rs  main.rs
src/ai/: client.rs
