[package]
name = "gamesir-ai-bot"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"

[workspace]
members = [ 
    "commands", 
]

[dependencies]
serenity = { version = "0.12.4", features = ["cache", "client", "gateway", "model", "rustls_backend"] }
tokio = { version = "1.45.1", features = ["full"] }
dotenvy = "0.15.7"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
poise = "0.6.1"
songbird = { version = "0.5.0", features = ["builtin-queue"] }

commands = {path = "commands"}

[workspace.dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
songbird = "0.5.0"
serenity = "0.12.4"
poise = "0.6.1"
