[package]
name = "gamesir-ai-bot"
version = "0.1.0"
edition = "2021"
rust-version = "1.87"

[workspace]
members = [ 
    "commands", 
]

[dependencies]
serenity = { version = "0.12.4", features = ["cache", "client", "gateway", "model", "rustls_backend"] }
tokio = { version = "1.45.1", features = ["full"] }
dotenvy = "0.15.7"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
poise = "0.6.1"
songbird = { version = "0.5.0", features = ["builtin-queue"] }
symphonia = { version = "0.5.4", features = ["aac", "mp3", "isomp4", "ogg", "vorbis", "flac", "pcm", "wav"] }

commands = {path = "commands"}

[workspace.dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
songbird = { version = "0.5.0", default-features = false, features = ["serenity", "rustls", "builtin-queue", "gateway", "driver"] }
symphonia = { version = "0.5.4", features = ["aac", "mp3", "isomp4", "ogg", "vorbis", "flac", "pcm", "wav"] }
serenity = "0.12.4"
poise = "0.6.1"
